# 30-Day-Challenge-AIDD-AIND-

./: .env  app.py  gemini.md  pdf_ops.py  pyproject.toml
.gemini/: settings.json
